# django-sbomrepo

./: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/workflows/: pubish.yml  publish.yml  publish_test.yml  test.yml
app/: README.md
sbomrepo/: __init__.py  apps.py  models.py  urls.py  utils.py  views.py
sbomrepo/management/commands/: resync_vulnerabilities.py
sbomrepo/migrations/: 0001_initial.py
testapp/: README.md
testapp/testapp/: settings.py  urls.py
testapp/testapp/tests/: test_views.py
testapp/testapp/tests/examples/: sbom.json
testapp/tests/: test_resync_vulnerabilities.py  test_urls.py  test_utils.py
testapp/tests/data/: ecosystems.txt  querybatch1.json
testapp/tests/examples/: pp.json  pub_sbom.json  tiny.json
